--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
 	{% load static %}
 	<title>Make It Simple | Homepage</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+	<link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}"> -->
 	<link rel="stylesheet" type="text/css" href="{% static 'semantic/semantic.min.css' %}">
 	<script type="text/javascript" src="{% static 'jquery/jquery-3.4.1.min.js' %}"></script>
